--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.13.1
+  #flutter_native_splash: ^2.3.4
 
 flutter_icons:
   android: true
@@ -67,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib\assets\images\logo.png
+    - lib\assets\images\splashLogo.png
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
