--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.13.1
-  flutter_animate: ^4.2.0+1
+  flutter_sizer: ^1.0.5
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
@@ -71,6 +71,7 @@ flutter:
     - lib\assets\images\logo.png
     - lib\assets\images\splashLogo.png
     - lib\assets\images\background.jpg
+    - lib\assets\images\background2.jpg
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
