--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.13.1
   flutter_sizer: ^1.0.5
+  google_nav_bar: ^5.0.6
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
