--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_sizer: ^1.0.5
   google_nav_bar: ^5.0.6
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
@@ -75,6 +77,10 @@ flutter:
     - lib\assets\images\background2.jpg
     - lib\assets\images\facebookhhh.png
     - lib\assets\images\instttttt.png
+    - lib\assets\images\CarouselSlider\Slider1.png
+    - lib\assets\images\CarouselSlider\Slider2.png
+    - lib\assets\images\CarouselSlider\Slider3.jpg
+    - lib\assets\images\CarouselSlider\Slider4.png
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
