--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
+  firebase_storage: ^11.5.2
+  firebase_messaging: ^14.7.5
+  firebase_auth: ^4.14.1
+  google_sign_in: ^6.1.6
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
