--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_messaging: ^14.7.5
   firebase_auth: ^4.14.1
   google_sign_in: ^6.1.6
+  awesome_dialog: ^3.1.0
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
