--- a/express/android/app/build.gradle
+++ b/express/android/app/build.gradle
@@ -26,7 +26,8 @@ apply plugin: 'com.google.gms.google-services'
 android {
     namespace "com.example.express"
     compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+
+    ndkVersion "25.2.9519653"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
