--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^4.14.1
   google_sign_in: ^6.1.6
   awesome_dialog: ^3.1.0
+  firebase_app_check: ^0.2.1+5
   #flutter_native_splash: ^2.3.4
 
 flutter_icons:
