--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   google_sign_in: ^6.1.6
   awesome_dialog: ^3.1.0
   firebase_app_check: ^0.2.1+5
-  #flutter_native_splash: ^2.3.4
+  syncfusion_flutter_pdfviewer: ^23.2.6
+
+  
 
 flutter_icons:
   android: true
@@ -89,6 +91,12 @@ flutter:
     - lib\assets\images\CarouselSlider\Slider2.png
     - lib\assets\images\CarouselSlider\Slider3.jpg
     - lib\assets\images\CarouselSlider\Slider4.png
+    - lib\assets\pdf\2381.pdf
+    - lib\assets\pdf\2381_2.pdf
+    - lib\assets\pdf\651.pdf
+    - lib\assets\pdf\2356.pdf
+    - lib\assets\pdf\2373.pdf
+    - lib\assets\pdf\elec_2_1.pdf
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
