--- a/express/pubspec.yaml
+++ b/express/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   awesome_dialog: ^3.1.0
   firebase_app_check: ^0.2.1+5
   syncfusion_flutter_pdfviewer: ^23.2.6
+  flutter_phone_direct_caller: ^2.1.1
+  url_launcher: ^6.2.1
 
   
 
